Mass reformat, primarily to rearrange members so fields are first.